--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,14 @@ repositories {
     mavenCentral()
 }
 
-task sourceJar(type: Jar) {
-    from sourceSets.main.allJava
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allSource
   	classifier "sources"
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-  from javadoc.destinationDir
-  classifier "javadoc"
+	from javadoc.destinationDir
+	classifier "javadoc"
 }
 
 
@@ -28,7 +28,7 @@ publishing {
         
             from components.java
 
-            artifact sourceJar
+            artifact sourcesJar
             artifact javadocJar
         }
     }
