perbaikan build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,18 @@
 
 apply plugin: 'java'
 apply plugin: 'maven'
-apply plugin: 'maven-publish'
 
 repositories {
     jcenter()
     mavenCentral()
 }
 
-task sourcesJar(type: Jar) {
-    from sourceSets.main.allSource
-  	classifier "sources"
+group = 'com.github.jajanjawa'
+version = "$version"
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+	from sourceSets.main.allSource
+	classifier "sources"
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -18,20 +20,9 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 	classifier "javadoc"
 }
 
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-        	groupId 'com.github.jajanjawa'
-            artifactId 'jnowdb'
-            version '0.2'
-        
-            from components.java
-
-            artifact sourcesJar
-            artifact javadocJar
-        }
-    }
+artifacts {
+    archives sourcesJar
+    archives javadocJar
 }
 
 dependencies {
